added mind buttons to the post page

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -32,3 +32,9 @@ other = "of"
 
 [ALittleBitMore]
 other = "A little bit more"
+
+[MindMusicTitle]
+other = "Music in the mind"
+
+[MindPhotoTitle]
+other = "Lookaround"
