--- a/i18n/ru.toml
+++ b/i18n/ru.toml
@@ -31,3 +31,9 @@ other = "из"
 
 [ALittleBitMore]
 other = "Что-то по теме"
+
+[MindMusicTitle]
+other = "Играло в голове"
+
+[MindPhotoTitle]
+other = "Взгляд вокруг"
