lots of fixes and improvements

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -38,3 +38,6 @@ other = "Music in the mind"
 
 [MindPhotoTitle]
 other = "Lookaround"
+
+[copyright]
+other = "all rights reserved. Woring link is required while reposting this article"
