--- a/i18n/ru.toml
+++ b/i18n/ru.toml
@@ -37,3 +37,6 @@ other = "Играло в голове"
 
 [MindPhotoTitle]
 other = "Взгляд вокруг"
+
+[copyright]
+other = "все права защищены. При копировании содержимого сайта актуальная ссылка на источник обязательна"
